--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rust-crypto-utils"
 version = "0.1.0"
 edition = "2021"
-authors = ["Tony Chuks Awunor <your-email@example.com>"]
+authors = ["Tony Chuks Awunor <chuksawunor@guardsarm.com>"]
 description = "Memory-safe cryptographic utilities for secure key handling and encryption"
 license = "MIT"
 repository = "https://github.com/guardsarm/rust-crypto-utils"
