--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ ed25519-dalek = "2.1"
 x25519-dalek = { version = "2.0", features = ["static_secrets"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
 base64 = "0.21"
 tokio = { version = "1.35", features = ["full"], optional = true }
 constant_time_eq = "0.3"
@@ -54,6 +55,3 @@ path = "examples/file_encryption.rs"
 name = "key_exchange"
 path = "examples/key_exchange.rs"
 
-[[bench]]
-name = "crypto_benchmark"
-harness = false
